add gc endpoint, rmeove all gc settings